<resources>
    <string name="app_name">Know Your Government</string>
    <string name="about">About</string>
    <string name="search_location">Search Location</string>
    <string name="powered_by">Powered By</string>
    <string name="api_attribution">API Attribution</string>
    <string name="version">Version 1.0</string>
    <string name="copyright">\u00a9  2020, Shantanoo Sinha</string>
    <string name="google_civic_information_api">Google Civic Information API</string>
    <string name="no_network_connection_title">No Network Connection</string>
    <string name="no_network_connection_message">Data cannot be accessed/loaded without an internet connection.</string>
    <string name="ok">OK</string>
    <string name="cancel">CANCEL</string>
    <string name="get_location_message">Enter City, State or a Zip Code:</string>
    <string name="no_data_for_location">No Data For Location</string>
    <string name="office">Office</string>
    <string name="official_name">Official Name</string>
    <string name="party">Party</string>
    <string name="address">Address:</string>
    <string name="address_text">Address text</string>
    <string name="youtube_link">Youtube Link</string>
    <string name="twitter_link">Twitter Link</string>
    <string name="facebook_link">Facebook Link</string>
    <string name="party_logo">Party Logo</string>
    <string name="official_photo">Official Photo</string>
    <string name="website_url">Website URL</string>
    <string name="website">Website:</string>
    <string name="email_address">Email Address</string>
    <string name="email">Email:</string>
    <string name="phone_number">Phone Number</string>
    <string name="phone">Phone:</string>
    <string name="democrat">democrat</string>
    <string name="republican">republican</string>
    <string name="location">location</string>
    <string name="data_not_found">No Data Provided</string>
    <string name="unknown">Unknown</string>
    <string name="no_app_found">No App Found</string>
    <string name="youtube_package">com.google.android.youtube</string>
    <string name="youtube_url">https://www.youtube.com/</string>
    <string name="facebook_package">com.facebook.katana</string>
    <string name="facebook_url">https://www.facebook.com/</string>
    <string name="facebook_app_url">fb://facewebmodal/f?href=</string>
    <string name="facebook_old_app_url">fb://page/</string>
    <string name="twitter_url">https://twitter.com/</string>
    <string name="twitter_package">com.twitter.android</string>
    <string name="twitter_screen_url">twitter://user?screen_name=</string>
    <string name="google_map_package">com.google.android.apps.maps</string>
    <string name="google_map_geo_url">geo:0,0?q=</string>
    <string name="mailto">mailto:</string>
    <string name="tel">tel:</string>
    <string name="official_image_message">Official image not available</string>
    <string name="republican_website">https://www.gop.com</string>
    <string name="democrat_website">https://democrats.org</string>
    <string name="official_designation">Official Designation</string>
    <string name="current_location">Current Location</string>
</resources>