<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/sbOfficialActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.OfficialActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/clOfficialActivity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".acy.OfficialActivity">

        <TextView
            android:id="@+id/tvCurrentLocation"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:gravity="center_horizontal"
            android:text="@string/no_data_for_location"
            tools:text="@string/no_data_for_location"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvOffice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center_horizontal"
            tools:text="@string/office"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvCurrentLocation" />

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center_horizontal"
            tools:text="@string/official_name"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvOffice" />

        <TextView
            android:id="@+id/tvParty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center_horizontal"
            tools:text="@string/party"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvName" />

        <ImageView
            android:id="@+id/ivOfficialPhoto"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="25dp"
            android:layout_marginRight="25dp"
            android:onClick="onClickOfficialPhoto"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvParty"
            app:srcCompat="@drawable/placeholder"
            android:contentDescription="@string/official_photo" />

        <ImageView
            android:id="@+id/ivPartyLogo"
            android:layout_width="wrap_content"
            android:layout_height="75dp"
            android:layout_marginTop="175dp"
            android:onClick="onClickPartyLogo"
            app:layout_constraintBottom_toBottomOf="@+id/ivOfficialPhoto"
            app:layout_constraintEnd_toEndOf="@id/ivOfficialPhoto"
            app:layout_constraintStart_toStartOf="@id/ivOfficialPhoto"
            app:layout_constraintTop_toBottomOf="@+id/tvParty"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@drawable/dem_logo"
            android:contentDescription="@string/party_logo" />

        <TextView
            android:id="@+id/tvAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="37dp"
            tools:text="@string/address"
            android:text="@string/address"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivOfficialPhoto" />

        <TextView
            android:id="@+id/tvAddressText"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:layout_marginStart="110dp"
            android:layout_marginTop="36dp"
            android:text="@string/address_text"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivOfficialPhoto" />

        <TextView
            android:id="@+id/tvPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="62dp"
            android:text="@string/phone"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvAddress" />

        <TextView
            android:id="@+id/tvPhoneText"
            android:layout_width="fill_parent"
            android:layout_height="38dp"
            android:layout_marginStart="110dp"
            android:layout_marginTop="24dp"
            android:text="@string/phone_number"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvAddressText" />

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="69dp"
            android:layout_height="21dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="41dp"
            android:text="@string/email"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvPhone" />

        <TextView
            android:id="@+id/tvEmailText"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:layout_marginStart="110dp"
            android:layout_marginTop="28dp"
            android:text="@string/email_address"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvPhoneText" />

        <TextView
            android:id="@+id/tvWebsite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="53dp"
            android:text="@string/website"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvEmail" />

        <TextView
            android:id="@+id/tvWebsiteURL"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_marginStart="110dp"
            android:layout_marginTop="24dp"
            android:text="@string/website_url"
            android:textColor="@color/white"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintE_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvEmailText" />

        <ImageView
            android:id="@+id/ivFacebook"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="10dp"
            android:onClick="onClickFacebook"
            android:src="@drawable/facebook"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/ivOfficialPhoto"
            app:layout_constraintTop_toBottomOf="@+id/tvWebsite"
            android:contentDescription="@string/facebook_link" />

        <ImageView
            android:id="@+id/ivTwitter"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="10dp"
            android:onClick="onClickTwitter"
            android:src="@drawable/twitter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/ivFacebook"
            app:layout_constraintEnd_toStartOf="@id/ivYoutube"
            app:layout_constraintTop_toBottomOf="@+id/tvWebsite"
            android:contentDescription="@string/twitter_link" />

        <ImageView
            android:id="@+id/ivYoutube"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="10dp"
            android:onClick="onClickYouTube"
            android:src="@drawable/youtube"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/ivOfficialPhoto"
            app:layout_constraintTop_toBottomOf="@+id/tvWebsite"
            android:contentDescription="@string/youtube_link" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>